combiner/target/debug/build/num-traits-31d5aac228d19f42/stderr
error[E0658]: use of unstable library feature 'leading_trailing_ones'
 --> <anon>:1:31
  |
1 | pub fn probe() { let _ = 1u32.trailing_ones(); }
  |                               ^^^^^^^^^^^^^
  |
  = note: see issue #57969 <https://github.com/rust-lang/rust/issues/57969> for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
